test/spec_vectors/return_call/fail/module_9.wat
(module (func $type-first-num-vs-num (return_call 1 (f64.const 1) (i32.const 1))) (func (param i32 f64)))